# reel-moby

./: .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  README.md  install-dev-dependencies.sh
src/: common.rs  error.rs  main.rs  repo.rs  tags.rs  ui.rs
src/common/: display_duration_ext.rs  mod.rs
src/repository/: dockerhub.rs  ghcr.rs  mod.rs
src/ui/: default.rs  mod.rs  no_yaml.rs  no_yaml_found.rs  yaml_found.rs
src/widget/: async_tag_list.rs  details.rs  info.rs  mod.rs  repo_entry.rs  service_switcher.rs  tag_list.rs
