
[package]
name = "reel-moby"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
chrono = "0.4.19"
tui = "0.16"
termion = "1.5"
regex = "1.5.4"
lazy_static = "1.4.0"
structopt = "0.3.23"
thiserror = "1.0.32"
anyhow = "1.0.59"

[profile.release]
lto = "yes"
opt-level = "z"