
[package]
name = "reel-moby"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.66"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
chrono = "0.4.40"
ratatui = { version = "0.29.0", features = ["termion"] }
termion = "4.0.4"
regex = "1.5.4"
lazy_static = "1.5.0"
structopt = "0.3.26"

[profile.release]
lto = "yes"
opt-level = "z"
