
[package]
name = "reel-moby"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4.40"
ratatui = { version = "0.29.0", features = ["termion"] }
termion = "4.0.4"
regex = "1.11.1"
lazy_static = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
clap_derive = "4.5.28"
thiserror = "1.0.32"
anyhow = "1.0.59"
tokio = { version = "1.24.2",  features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = "yes"
opt-level = "z"
strip="debuginfo"
